--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -22,6 +22,6 @@ const { Content } = await tab.render()
 
 <Layout title={`${data.title} - Tino's Tabs`}>
   <div class="text-stone-500">Tab!</div>
-  <Image src={data.albumImageURL} alt='Album Cover'/>
+  <Image src={data.albumImageURL} alt="Album Cover" />
   <Content />
 </Layout>
