--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,28 +51,45 @@ const tabGroups = toTabGroups(tabs)
 ---
 
 <Layout title="Tino's Tabs">
-  <div class="text-stone-500">Hello there!</div>
-  <ol>
+  <ol class="flex flex-col gap-4">
     {
       tabGroups.map((group) => (
-        <li>
-          <div class="flex gap-2">
-            <div>{group.artist.name}</div>
-            <Image
-              src={group.artist.imageURL}
-              alt="Artist Avatar"
-              class="h-5 w-5 object-cover rounded-full"
-            />
+        <li class="bg-stone-50 rounded-xl p-3 flex flex-col gap-3">
+          <div class="flex gap-2 justify-between items-center">
+            <div class="flex flex-col">
+              <div class="font-semibold text-2xl">{group.artist.name}</div>
+              <div class="font-medium text-sm text-stone-400">
+                {`${group.tabs.length} ${
+                  group.tabs.length === 1 ? 'tab' : 'tabs'
+                }`}
+              </div>
+            </div>
+            <div class="relative after:content-[''] after:rounded-full after:absolute after:inset-0 after:ring-1 after:ring-inset after:ring-black/10">
+              <Image
+                src={group.artist.imageURL}
+                alt="Artist Avatar"
+                class="h-12 w-12 object-cover rounded-full"
+              />
+            </div>
           </div>
-          <ol>
+          <ol class="flex flex-col gap-3">
             {group.tabs.map((tab) => (
-              <li class="flex gap-2 items-center">
-                <Image
-                  src={tab.data.albumImageURL}
-                  alt="Album Cover"
-                  class="h-5 w-5 object-cover"
-                />
-                <a href={`/${tab.slug}`}>{tab.data.title}</a>
+              <li>
+                <a href={`/${tab.slug}`} class="flex gap-2 items-center">
+                  <div class="relative after:content-[''] after:rounded after:absolute after:inset-0 after:ring-1 after:ring-inset after:ring-black/10">
+                    <Image
+                      src={tab.data.albumImageURL}
+                      alt="Album Cover"
+                      class="h-10 w-10 object-cover rounded"
+                    />
+                  </div>
+                  <div class="flex flex-col">
+                    <div class="leading-snug">{tab.data.title}</div>
+                    <div class="text-stone-400 leading-snug text-sm">
+                      {tab.data.album}
+                    </div>
+                  </div>
+                </a>
               </li>
             ))}
           </ol>
