--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -3,6 +3,8 @@ import type { InferGetStaticPropsType, GetStaticPaths } from 'astro'
 import { getCollection } from 'astro:content'
 import Layout from '../layouts/Layout.astro'
 import { Image } from 'astro:assets'
+import appleMusicIconImage from '../assets/images/icons/apple-music.webp'
+import spotifyIconImage from '../assets/images/icons/spotify.webp'
 
 export const getStaticPaths = (async () => {
   const tabs = await getCollection('tabs')
@@ -21,6 +23,7 @@ const { Content } = await tab.render()
 ---
 
 <Layout title={`${data.title} - Tino's Tabs`}>
+  {/* TODO a way to get to the index/home page */}
   <div class="flex flex-col items-center gap-4">
     <div
       class="relative shadow-2xl rounded-md after:content-[''] after:rounded-md after:absolute after:inset-0 after:ring-1 after:ring-inset after:ring-black/10"
@@ -35,6 +38,7 @@ const { Content } = await tab.render()
       <h1 class="font-semibold text-2xl">{data.title}</h1>
       <h2 class="text-stone-500">{`${data.album} • ${data.artist}`}</h2>
     </div>
+    {/* TODO add to frontmatter */}
     <div
       class="bg-stone-50 flex self-stretch divide-x p-1.5 rounded-md text-sm"
     >
@@ -44,6 +48,42 @@ const { Content } = await tab.render()
       <div class="flex-1 text-center text-stone-500">
         Capo <span class="text-stone-900 font-medium">4th fret</span>
       </div>
+    </div>
+    {/* TODO use actual links, add to frontmatter */}
+    {/* TODO press animation */}
+    <div class="flex gap-3 self-stretch">
+      <a
+        href="https://spotify.link/sX0pbnm52Db"
+        target="_blank"
+        class="text-center border border-stone-300 rounded-full flex-1 px-2 py-1 text-stone-500 font-medium shadow-[0_1px_0_theme(colors.stone.300),0_2px_2px_0_rgb(0_0_0_/_0.05)] flex items-center gap-2 justify-center"
+      >
+        <span>
+          Play on <span class="hidden sm:inline">Spotify</span>
+        </span>
+        <span
+          class="relative rounded after:content-[''] after:rounded after:absolute after:inset-0 after:ring-1 after:ring-inset after:ring-black/10"
+        >
+          <Image src={spotifyIconImage} alt="Spotify" class="w-5 h-5 rounded" />
+        </span>
+      </a>
+      <a
+        href="https://music.apple.com/ar/album/dear-marie/672720304?i=672720308&l"
+        target="_blank"
+        class="text-center border border-stone-300 rounded-full flex-1 px-2 py-1 text-stone-500 font-medium shadow-[0_1px_0_theme(colors.stone.300),0_2px_2px_0_rgb(0_0_0_/_0.05)] flex items-center gap-2 justify-center"
+      >
+        <span>
+          Play on <span class="hidden sm:inline">Apple Music</span>
+        </span>
+        <span
+          class="relative rounded after:content-[''] after:rounded after:absolute after:inset-0 after:ring-1 after:ring-inset after:ring-black/10"
+        >
+          <Image
+            src={appleMusicIconImage}
+            alt="Apple Music"
+            class="w-5 h-5 rounded"
+          />
+        </span>
+      </a>
     </div>
   </div>
   <!-- <Content /> -->
