--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -63,7 +63,7 @@ function formatNumberWithOrdinalSuffix(value: number): string {
     {/* TODO use actual links, add to frontmatter */}
     <div class="flex gap-3 self-stretch">
       <a
-        href="https://spotify.link/sX0pbnm52Db"
+        href={data.spotifyURL}
         target="_blank"
         class="text-center border border-stone-300 rounded-full flex-1 px-2 py-1 text-stone-500 font-medium shadow-[0_1px_0_theme(colors.stone.300),0_2px_2px_0_rgb(0_0_0_/_0.05)] flex items-center gap-2 justify-center active:translate-y-[1px] active:shadow-none transition-all active:bg-stone-50 hover:bg-stone-50"
       >
@@ -77,7 +77,7 @@ function formatNumberWithOrdinalSuffix(value: number): string {
         </span>
       </a>
       <a
-        href="https://music.apple.com/ar/album/dear-marie/672720304?i=672720308&l"
+        href={data.appleMusicURL}
         target="_blank"
         class="text-center border border-stone-300 rounded-full flex-1 px-2 py-1 text-stone-500 font-medium shadow-[0_1px_0_theme(colors.stone.300),0_2px_2px_0_rgb(0_0_0_/_0.05)] flex items-center gap-2 justify-center active:translate-y-[1px] active:shadow-none transition-all active:bg-stone-50 hover:bg-stone-50"
       >
