--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="px-5 py-10 text-stone-800 max-w-prose mx-auto">
+  <body class="mx-auto max-w-prose px-5 py-10 text-stone-800">
     <slot />
   </body>
 </html>
