--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,47 +51,47 @@ const tabGroups = toTabGroups(tabs)
 ---
 
 <Layout title="Tino's Tabs">
-  <h1 class="font-semibold text-3xl mb-4">Tino's Tabs</h1>
-  <p class="text-stone-400 mb-8 max-w-md">
+  <h1 class="mb-4 text-3xl font-semibold">Tino's Tabs</h1>
+  <p class="mb-8 max-w-md text-stone-400">
     A collection of tabs I’ve put together throughout the years, with video
     references, lyrics, and other useful stuff. Hope they help!
   </p>
   <ol class="flex flex-col gap-4">
     {
       tabGroups.map((group) => (
-        <li class="bg-stone-50 rounded-xl p-3 flex flex-col gap-3">
-          <div class="flex gap-2 justify-between items-center">
+        <li class="flex flex-col gap-3 rounded-xl bg-stone-50 p-3">
+          <div class="flex items-center justify-between gap-2">
             <div class="flex flex-col">
-              <div class="font-semibold text-2xl">{group.artist.name}</div>
-              <div class="font-medium text-sm text-stone-400">
+              <div class="text-2xl font-semibold">{group.artist.name}</div>
+              <div class="text-sm font-medium text-stone-400">
                 {`${group.tabs.length} ${
                   group.tabs.length === 1 ? 'tab' : 'tabs'
                 }`}
               </div>
             </div>
             {/* TODO share roundedness? Check using CSS Vars in tailwind */}
-            <div class="relative after:content-[''] after:rounded-full after:absolute after:inset-0 after:ring-1 after:ring-inset after:ring-black/10">
+            <div class="relative after:absolute after:inset-0 after:rounded-full after:ring-1 after:ring-inset after:ring-black/10 after:content-['']">
               <Image
                 src={group.artist.imageURL}
                 alt="Artist Avatar"
-                class="h-12 w-12 object-cover rounded-full"
+                class="h-12 w-12 rounded-full object-cover"
               />
             </div>
           </div>
           <ol class="flex flex-col gap-3">
             {group.tabs.map((tab) => (
               <li>
-                <a href={`/${tab.slug}`} class="flex gap-2 items-center">
-                  <div class="relative after:content-[''] after:rounded after:absolute after:inset-0 after:ring-1 after:ring-inset after:ring-black/10">
+                <a href={`/${tab.slug}`} class="flex items-center gap-2">
+                  <div class="relative after:absolute after:inset-0 after:rounded after:ring-1 after:ring-inset after:ring-black/10 after:content-['']">
                     <Image
                       src={tab.data.albumImageURL}
                       alt="Album Cover"
-                      class="h-10 w-10 object-cover rounded"
+                      class="h-10 w-10 rounded object-cover"
                     />
                   </div>
                   <div class="flex flex-col">
                     <div class="leading-snug">{tab.data.title}</div>
-                    <div class="text-stone-400 leading-snug text-sm">
+                    <div class="text-sm leading-snug text-stone-400">
                       {tab.data.album}
                     </div>
                   </div>
