--- a/src/components/UsefulVideos.astro
+++ b/src/components/UsefulVideos.astro
@@ -1,21 +1,21 @@
 ---
 type Props = {
-  urls: Array<string>
+  videoIDs: Array<string>
   searchQuery: string
 }
 
-const { urls, searchQuery } = Astro.props
+const { videoIDs: urls, searchQuery } = Astro.props
 ---
 
 <div
   class="-my-5 mx-[calc(-50vw+50%)] flex gap-4 overflow-x-auto px-[calc(50vw-50%)] py-5"
 >
   {
-    urls.map((url) => (
+    urls.map((id) => (
       <div class="relative aspect-video max-w-[75%] shrink-0 basis-[75%] rounded-xl bg-stone-50 shadow-lg after:pointer-events-none after:absolute after:inset-0 after:rounded-xl after:ring-1 after:ring-inset after:ring-black/10 after:content-['']">
         <iframe
           class="aspect-video w-full rounded-xl"
-          src={url}
+          src={`https://www.youtube.com/embed/${id}`}
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
         />
