--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,6 +79,7 @@ const tabGroups = toTabGroups(tabs)
             </div>
           </div>
           <ol class="flex flex-col gap-3">
+            {/* TODO hover states and stuff */}
             {group.tabs.map((tab) => (
               <li>
                 <a href={`/${tab.slug}`} class="flex items-center gap-2">
