fix image bgs & size

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -52,12 +52,12 @@ function formatNumberWithOrdinalSuffix(value: number): string {
   </a>
   <div class="mb-8 mt-6 flex flex-col items-center gap-4">
     <div
-      class="relative rounded-md shadow-2xl after:absolute after:inset-0 after:rounded-md after:ring-1 after:ring-inset after:ring-black/10 after:content-['']"
+      class="relative h-44 w-44 rounded-md bg-stone-50 shadow-2xl after:absolute after:inset-0 after:rounded-md after:ring-1 after:ring-inset after:ring-black/10 after:content-['']"
     >
       <Image
         src={data.albumImageURL}
         alt={`${data.album} Album Cover`}
-        class="h-4w-44 w-44 rounded-md"
+        class="h-44 w-44 rounded-md"
       />
     </div>
     <div class="flex flex-col items-center">
