--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,7 +69,7 @@ const tabGroups = toTabGroups(tabs)
                 }`}
               </div>
             </div>
-            <div class="relative after:absolute after:inset-0 after:rounded-full after:ring-1 after:ring-inset after:ring-black/10 after:content-['']">
+            <div class="relative h-12 w-12 rounded-full bg-stone-100 after:absolute after:inset-0 after:rounded-full after:ring-1 after:ring-inset after:ring-black/10 after:content-['']">
               <Image
                 src={group.artist.imageURL}
                 alt={`${group.artist.name} Profile Image`}
@@ -84,7 +84,7 @@ const tabGroups = toTabGroups(tabs)
                   href={`/${tab.slug}`}
                   class="group flex items-center gap-3 rounded-lg p-2 transition-colors hover:bg-stone-100"
                 >
-                  <div class="relative after:absolute after:inset-0 after:rounded after:ring-1 after:ring-inset after:ring-black/10 after:transition-colors after:content-[''] group-hover:after:bg-black/5">
+                  <div class="relative h-10 w-10 rounded bg-stone-100 after:absolute after:inset-0 after:rounded after:ring-1 after:ring-inset after:ring-black/10 after:transition-colors after:content-[''] group-hover:after:bg-black/5">
                     <Image
                       src={tab.data.albumImageURL}
                       alt={`${tab.data.album} Album Cover`}
