fix contrast, back link size

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -32,7 +32,7 @@ function formatNumberWithOrdinalSuffix(value: number): string {
 <Layout title={`${data.title} - Tino's Tabs`}>
   <a
     href="/"
-    class="-ml-2 -mt-5 flex items-center gap-0.5 justify-self-start font-medium text-stone-500 transition-colors hover:text-stone-600"
+    class="-ml-2 -mt-5 flex w-fit items-center gap-0.5 justify-self-start font-medium text-stone-500 transition-colors hover:text-stone-700"
   >
     <svg
       width="22"
